2024-07-25:
- Menu affiche des statuts et permet d'installer Winget et Choco

2024-07-20:
- Diagnostique est maintenant en WPF
- Ajout de Throttlestop à Diagnostique
- Amélioration d'installation

2024-07-10:
- Menu est maintenant en WPF
- Installation est maintenant en WPF

2023-12-17:
- Décocher Teamviewer par défaut
- Modifier fonction fast boot pour seulement décocher la case
- kill process ninite qui bug la suppression finale
- Update Winget v1.6 (from 1.3) pour W11 23h2

2023-03-06:
- Ajout du Menu de choix des applications pour Installation
- Ajout d'une scrollbar pour output de Installation

2023-02-22:
- Ajout raccourci sur le bureau de Menu.bat

2023-02-02:
- Enlever EaseUS de Fix

2023-01-31:
- Menu vérifie la connexion Internet
- Installation shutdown ordi après 5 minutes au lieu de 1 minute

2023-01-14:
- Vitesse et santé HDD download direct dans Optimisation now au lieu de reprendre celui de Diag

2023-01-07:
- Ajout du bouton changelog à Menu
- Améliorer Secu_Dossier de Fix